# RFPilot

./: .gitignore  README.md  judges.txt  main.py  package-lock.json  pyproject.toml
RFPilot-vue/: index.html  package-lock.json  package.json
RFPilot-vue/src/: main.js
RFPilot-vue/src/components/: EvaluationPage.vue  ProposalSummary.vue  PrototypeGenerator.vue  ScriptUpload.vue  UploadProposal.vue  VoiceUpload.vue
RFPilot-vue/src/components/common/: Header.vue  LoadingPage.vue  ResultSection.vue  ResultView.vue  SidebarMenu.vue  UploadSection.vue
RFPilot-vue/src/components/evalutaion/: EvaluationResult.vue  EvaluationUpload.vue
RFPilot-vue/src/components/proposal/: LoadingPage.vue  ProposalSummary.vue  UploadProposal.vue
RFPilot-vue/src/components/prototype/: PrototypeGenerator.vue  PrototypeResult.vue
RFPilot-vue/src/components/script/: ScriptResult.vue  ScriptUpload.vue
RFPilot-vue/src/router/: index.js
api/agent/: analysis_fit_agent.py  evaluate_material.py  evaluate_script.py  evaluate_script_agent.py  generate_judges.py  pitch_evaluation_agent.py  prototype_generator.py  suggest_trends_agent.py  summarize.py  summary_agent.py
api/models/: vector_store.py
api/routers/: analysis_router.py  chunk_router.py  document_router.py  pitch_router.py  router.py
api/schemas/: request.py  response.py
api/services/: analysis.py  chunking.py  createdb.py  embedding.py  evaluate.py
faiss_store/: index.faiss  index.pkl
faiss_store/abc.pdf/: index.faiss  index.pkl
proposal_vector_db/: index.faiss  index.pkl
(+2 files in other folders)
