[project]
name = "rfpilot"
version = "0.1.0"
description = "skala rfpilot"
authors = [
    {name = "chaerish",email = "ccyy8432@naver.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "openai-whisper (>=20240930,<20240931)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openai (>=1.77.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
